--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -55,7 +55,7 @@ Introduction
 investigation being reported. End by stating the aim or specific
 objectives, including any prespecified hypotheses. The introduction
 should not be longer than 1-1.5 pages, typically 4-5 paragraphs, each
-6-8 lines long. Support every statement with a citation -->
+6-8 lines long. Support every statement with a citation -->....
 
 You can cite document here like this [@exampleKey9999]. Open the file
 bibliography.bib to learn more.
@@ -63,7 +63,7 @@ bibliography.bib to learn more.
 Methods 
 =======
 
-Study design
+Study design 10
 ------------
 
 <!-- Present key elements of study design -->
