--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -6,4 +6,4 @@ format: html
 
 ## Introduction 
 
-"Trauma - physical injury and the body's associated response - is a major cause of death and disability worldwide. Every year, over four million people die from trauma, and it is the top cause of the burden of disease in young people. Traumatic brain injury is a major cause of death and disability in trauma patients. Trauma quality improvement programmes aim to identify opportunities for improvement in the care of trauma patients and to implement changes to improve patient outcomes. The management of trauma patients once they reach the hospital is very time sensitive and error-prone, but little is known about potential opportunities for improvement among patients with traumatic brain injury."
+Injury has reached epidemic proportions worldwide, disproportionately affecting the most productive and the youngest members of society. Trauma, often synonymously used with serious injury, is defined as the physical injury and the body's associated response (1). Furthermore, trauma remains a leading cause of death and disability worldwide, where it is the foremost cause of death among people under the age of 45 and ranks as the fourth leading cause of death across all ages (2). 
