Adding references using bibtex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,3 +7,19 @@
   number = 	 1,
   pages = 	 {1-2},
   month = 	 {Aug}}
+  
+@article{Szolnoky2025,
+  title   = {Incidence of opportunities for improvement in trauma patient care: a retrospective registry-based study},
+  author  = {Szolnoky, Kelvin and Joneborg, Elias and Attergrim, Jonatan and Albaaj, Hussein and Str{\"o}mmer, Lovisa and Brattstr{\"o}m, Olof and Jacobsson, Martin and Gerdin W{\"a}rnberg, Martin},
+  journal = {Trauma Surgery \& Acute Care Open},
+  publisher = {BMJ},
+  volume  = {10},
+  number  = {2},
+  pages   = {e001676},
+  month   = {may},
+  year    = {2025},
+  doi     = {10.1136/tsaco-2024-001676},
+}
+
+
+  
