Writing method section in project plan, need to edit parts of introduction

--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -4,7 +4,7 @@ date: today
 format: html
 bibliography: bibliography.bib
 csl: vancouver.csl
-# Shorten text to 4-5 paragraphs. Text rn is fot the project description
+# Shorten text to 4-5 paragraphs. Text rn is for the project description
 ---
 ## Introduction
 
@@ -18,7 +18,7 @@ Among trauma-related conditions, traumatic brain injury (TBI) is a major cause o
 
 The management of TBI in the ICU is particularly challenging. Given the heterogeneity and dynamic nature of the condition, care must prioritise the prevention and limitation of secondary systemic threats such as hypoxia, hypercapnia, arterial hypotension, hyponatraemia and pyrexia. Equal attention must also be directed toward secondary intracranial threats, including expanding haematomas, cerebral contusions and rises in intracranial pressure. (5–7) Although these complexities are often anticipated, they render ICU care especially vulnerable to deviations from optimal practice, thereby posing risks to both patient safety and overall quality of care.   
 
-The intensive care of patients with TBI has been addressed in both guidelines and reviews. Multiple recent reviews and guideline updates consistently refer to the Brain Trauma Foundation (BTF) Fourth Edition, which remains a central reference for modern management (5–9). According to the BTF, treatment should be initiated when intracranial pressure (ICP) exceeds 22 mmHg. Cerebral perfusion pressure (CPP) should be maintained between 60–70 mmHg. Prophylactic hyperventilation should be avoided within the first 24 hours, and corticosteroid usage should be refrained from. At Karolinska University Hospital, the setting for this study, similar principles are seen in the Traumahandboken. For severe TBI, defined as GCS < 8, early airway protection with intubation in unconscious patients, rapid CT imaging, timely administration of tranexamic acid, and early neurosurgical consultation are recommended. In cases where there are signs of impending herniation, the handbook advises measures such as controlled hyperventilation and osmotherapy with mannitol or hypertonic saline. All this is always in conjunction with urgent neurosurgical evaluation. (Källa Karolinska handboken)  <!-- Make these two into one paragraph -->
+The intensive care of patients with TBI has been addressed in both guidelines and reviews. Multiple recent reviews and guideline updates consistently refer to the Brain Trauma Foundation (BTF) Fourth Edition, which remains a central reference for modern management (5–9). According to the BTF, treatment should be initiated when intracranial pressure (ICP) exceeds 22 mmHg. Cerebral perfusion pressure (CPP) should be maintained between 60–70 mmHg. Prophylactic hyperventilation should be avoided within the first 24 hours, and corticosteroid usage should be refrained from. At Karolinska University Hospital, the setting for this study, similar principles are seen in the Traumahandboken. For severe TBI, defined as GCS < 8, early airway protection with intubation in unconscious patients, rapid CT imaging, timely administration of tranexamic acid, and early neurosurgical consultation are recommended. In cases where there are signs of impending herniation, the handbook advises measures such as controlled hyperventilation and osmotherapy with mannitol or hypertonic saline. All this is always in conjunction with urgent neurosurgical evaluation. (Källa Karolinska handboken)  <!-- Make these two into one paragraph, remove local sources such as Karolinska handboken and keep it more generally applicable -->
 
 ### Trauma Quality Improvement
 
