--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,13 +1,3 @@
-@article{exampleKey9999,
-  author = 	 {{This is an example of a BibTex entry}},
-  title = 	 {You can get the BibTex entry of any article using its doi from for example https://www.bibtex.com/c/doi-to-bibtex-converter/},
-  journal = 	 {You can remove this entry once you start putting your own entries here},
-  year = 	 9999,
-  volume = 	 1,
-  number = 	 1,
-  pages = 	 {1-2},
-  month = 	 {Aug}}
-  
 @article{Szolnoky2025,
   title   = {Incidence of opportunities for improvement in trauma patient care: a retrospective registry-based study},
   author  = {Szolnoky, Kelvin and Joneborg, Elias and Attergrim, Jonatan and Albaaj, Hussein and Str{\"o}mmer, Lovisa and Brattstr{\"o}m, Olof and Jacobsson, Martin and Gerdin W{\"a}rnberg, Martin},
@@ -21,5 +11,16 @@
   doi     = {10.1136/tsaco-2024-001676},
 }
 
+@article{Maerz2009,
+  title     = "Trauma",
+  author    = "Maerz, Linda L and Davis, Kimberly A and Rosenbaum, Stanley H",
+  journal   = "Int. Anesthesiol. Clin.",
+  publisher = "Ovid Technologies (Wolters Kluwer Health)",
+  volume    =  47,
+  number    =  1,
+  pages     = "25--36",
+  year      =  2009,
+  language  = "en"
+}
 
   
