Adding general management about TBI in intro

--- a/project-plan.qmd
+++ b/project-plan.qmd
@@ -32,16 +32,21 @@ Among trauma-related conditions, traumatic brain injury (TBI) is a major cause o
 Management of TBI in the ICU 
 ------------
 
+Initial management of TBI spans prehospital and early in-hospital phases and centres on rapid physiological stabilisation and diagnostics in order for secondary injuries to be limited. Protection of the airway in patients with impaired consciousness, adequate oxygenation and normocapnia, and fast correction of hypotension are all prioritised in the initial phase of management as hypoxia and low blood pressures are associated with an increased mortality (6–9).  Non-contrast head CT should be performed without delay to identify surgically remediable lesions. Depending on mechanism and physiology, whole-body CT may be used selectively, as randomised data show no mortality advantage over targeted imaging, while observational work underscores the benefit of immediate CT pathways for severely injured patients (10,11). Haemostatic strategies in the early stages, such as administering tranexamic acid within three hours of injury, can reduce head injury-related mortality (12). After this initial phase, depending on the patient's condition, management transitions to other areas of the hospital, where sustained prevention of secondary systemic and intracranial insults becomes the primary focus. 
+
 The management of TBI in the ICU is particularly challenging. Given the heterogeneity and dynamic nature of the condition, care must prioritise the prevention and limitation of secondary systemic threats such as hypoxia, hypercapnia, arterial hypotension, hyponatraemia and pyrexia. Equal attention must also be directed toward secondary intracranial threats, including expanding haematomas, cerebral contusions and rises in intracranial pressure. (5–7) Although these complexities are often anticipated, they render ICU care especially vulnerable to deviations from optimal practice, thereby posing risks to both patient safety and overall quality of care.   
 
-The intensive care of patients with TBI has been addressed in both guidelines and reviews. Multiple recent reviews and guideline updates consistently refer to the Brain Trauma Foundation (BTF) Fourth Edition, which remains a central reference for modern management (5–9). According to the BTF, treatment should be initiated when intracranial pressure (ICP) exceeds 22 mmHg. Cerebral perfusion pressure (CPP) should be maintained between 60–70 mmHg. Prophylactic hyperventilation should be avoided within the first 24 hours, and corticosteroid usage should be refrained from. At Karolinska University Hospital, the setting for this study, similar principles are seen in the Traumahandboken. For severe TBI, defined as GCS < 8, early airway protection with intubation in unconscious patients, rapid CT imaging, timely administration of tranexamic acid, and early neurosurgical consultation are recommended. In cases where there are signs of impending herniation, the handbook advises measures such as controlled hyperventilation and osmotherapy with mannitol or hypertonic saline. All this is always in conjunction with urgent neurosurgical evaluation. (Källa Karolinska handboken)  <!-- Make these two into one paragraph -->
+The intensive care of patients with TBI has been addressed in both guidelines and reviews. Multiple recent reviews and guideline updates consistently refer to the Brain Trauma Foundation (BTF) Fourth Edition, which remains a central reference for modern management (5–9). According to the BTF, treatment should be initiated when intracranial pressure (ICP) exceeds 22 mmHg. Cerebral perfusion pressure (CPP) should be maintained between 60–70 mmHg. Prophylactic hyperventilation should be avoided within the first 24 hours, and corticosteroid usage should be refrained from. 
+
+
+(At Karolinska University Hospital, the setting for this study, similar principles are seen in the Traumahandboken. For severe TBI, defined as GCS < 8, early airway protection with intubation in unconscious patients, rapid CT imaging, timely administration of tranexamic acid, and early neurosurgical consultation are recommended. In cases where there are signs of impending herniation, the handbook advises measures such as controlled hyperventilation and osmotherapy with mannitol or hypertonic saline. All this is always in conjunction with urgent neurosurgical evaluation. (Källa Karolinska handboken))  <!-- Remove? -->
 
 Trauma Quality Improvement
 ------------
 
 Despite the presence of systems and guidelines in place for these patients, trauma care remains vulnerable to errors, deviations from established practice, and treatment delays, all of which may negatively influence outcomes. In response, the American College of Surgeons developed the Trauma Quality Improvement Program (TQIP), a risk-adjusted benchmarking system designed to assess the quality of trauma care. Through audit filters and peer review, it identifies opportunities for improvement (OFI) and ultimately reduces trauma-related mortality (10,11). Previous studies and reviews have discussed preventable trauma deaths where recurring patterns occur, namely, delays in imaging and care, missed injuries, deviations in care regarding airway-related care, haemorrhage control, and fluid management (12–16). Importantly, some of these findings were observed in high-performing level I trauma centres, underscoring that even mature systems remain vulnerable to error. Furthermore, injuries to the central nervous system account for a substantial proportion of trauma-related deaths, as demonstrated in analyses from large registries such as the Arkansas Trauma Registry (16). Yet, while previous research has described OFI in trauma resuscitation and in general ICU trauma cohorts, relatively little is known about the prevalence, nature, and determinants of OFI specifically among patients with TBI.
 
-Previous papers at Karolinska University Hospital have contributed to this field by describing OFIs across different aspects of trauma care. In 2023, Hussein A. et al. analysed patient- and process-related factors during trauma resuscitation and concluded that variables such as time to first CT and injury severity were strongly associated with OFI (17). Cao ES. et al. continued the focus on ICU cohorts, presenting that 9.9% ICU-admitted adult trauma patients experienced at least one OFI (1). Most recently, Szolnoky K et al. assessed OFI patterns in trauma cohorts and demonstrated that, although overall incidence declined over time, patients with TBI remained likely to have preventable shortcomings in care (18). 
+Previous papers at Karolinska University Hospital have contributed to this field by describing OFIs across different aspects of trauma care. In 2023, Hussein A. et al. analysed patient- and process-related factors during trauma resuscitation and concluded that variables such as time to first CT and injury severity were strongly associated with OFI (17). Cao ES. et al. continued the focus on ICU cohorts, presenting that 9.9% ICU-admitted adult trauma patients experienced at least one OFI (1). Most recently, Szolnoky K et al. assessed OFI patterns in trauma cohorts and demonstrated that, although overall incidence declined over time, patients with TBI remained likely to have preventable shortcomings in care (18). <!-- Rewrite into a more general rationale paragraph-->
 
 
 Methods
