--- a/project-plan.qmd
+++ b/project-plan.qmd
@@ -68,7 +68,10 @@ Furthermore, the trauma registry includes about 14000 patients admitted between 
 
 Participants
 ------------
-Included in the study were all adult patients with TBI recorded in the Karolinska trauma registry between 2012 and 2023 who also had been screened for opportunity for improvements. Furthermore, TBI was defined as (a GCS score of ≤8 combined with an Abbreviated Injury Scale ≥3 for the head region ….  ) Patients were eligible irrespective of level of care and were not restricted to intensive care admissions.
+Included in the study were all adult patients with TBI recorded in the Karolinska trauma registry between 2012 and
+2023 who also had been screened for opportunity for improvements. Furthermore, TBI was defined as (a GCS score of ≤8
+combined with an Abbreviated Injury Scale ≥3 for the head region ….  ) Patients were eligible irrespective of level <!-- Definition found in Elins paper, same applies?-->
+of care and were not restricted to intensive care admissions.
 
 Patients younger than 18 years were excluded, as their trauma follows separate clinical care systems and quality review processes that differ from those for adults . Also excluded were patients declared dead on arrival, since assessment of opportunities for improvement in these cases is not relevant to the aim of this study.
 
